feat: added search page UI
